[gd_scene load_steps=5 format=3 uid="uid://mvfeujtkvhkc"]

[ext_resource type="SpriteFrames" uid="uid://xpba6qtmeqvf" path="res://flip_frames.tres" id="1_u3cyc"]
[ext_resource type="Script" uid="uid://cqjlnwn7x0djg" path="res://page.gd" id="2_m7jmp"]
[ext_resource type="SpriteFrames" uid="uid://x5t4briwimbw" path="res://flip_below_frames.tres" id="3_y2354"]
[ext_resource type="SpriteFrames" uid="uid://biy4nb0gjucob" path="res://flip_above_frames.tres" id="4_ni31j"]

[node name="Root" type="Node2D"]

[node name="Page" type="AnimatedSprite2D" parent="."]
position = Vector2(363, 452)
sprite_frames = ExtResource("1_u3cyc")
script = ExtResource("2_m7jmp")

[node name="PageBelow" type="AnimatedSprite2D" parent="Page"]
clip_children = 1
sprite_frames = ExtResource("3_y2354")

[node name="PageAbove" type="AnimatedSprite2D" parent="Page"]
clip_children = 1
sprite_frames = ExtResource("4_ni31j")

[connection signal="animation_finished" from="Page" to="Page" method="_on_page_animation_finished"]
